ajout du controller recherche
