# backend/routes/search.js
@@ -7,9 +7,6 @@ const router = express.Router();
 const searchController = require("../controllers/searchController");
 
 // /search/ => GET
-router.get(
-  "/search/:date/:planetId/:danger/:prime",
-  searchController.createSearch
-);
+router.get("/search", searchController.createSearch);
 
 module.exports = router;
