# backend/swagger-output.json
@@ -123,38 +123,51 @@
         }
       }
     },
-    "/search/{date}/{planetId}/{danger}/{prime}": {
+    "/search": {
       "get": {
         "tags": ["Recherche"],
         "summary": "Effectuer une recherche",
         "description": "",
         "parameters": [
           {
-            "name": "date",
-            "in": "path",
-            "required": true,
+            "name": "minDate",
+            "in": "query",
+            "type": "string"
+          },
+          {
+            "name": "maxDate",
+            "in": "query",
+            "type": "string"
+          },
+          {
+            "name": "minPrime",
+            "in": "query",
+            "type": "string"
+          },
+          {
+            "name": "maxPrime",
+            "in": "query",
+            "type": "string"
+          },
+          {
+            "name": "dangers",
+            "in": "query",
             "type": "string"
           },
           {
             "name": "planetId",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          },
-          {
-            "name": "danger",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          },
-          {
-            "name": "prime",
-            "in": "path",
-            "required": true,
+            "in": "query",
             "type": "string"
           }
         ],
-        "responses": {}
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "404": {
+            "description": "Non Trouvé"
+          }
+        }
       }
     },
     "/planetes/": {
